# android-gradle-generateJsonModelDebug-failed-2

./: CMakeLists.txt  README.md  README.rst  build.gradle
app/: build.gradle
gradle/wrapper/: gradle-wrapper.properties
